MET-6561 add enrichment to organizations